--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   curved_labeled_navigation_bar: ^2.0.2
   chips_choice: ^3.0.1
   otp_pin_field: ^1.2.8
+  pinput: ^5.0.0
 
 dev_dependencies:
   mockito:
