--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   pinput: ^5.0.0
   intl: ^0.19.0
   ionicons: ^0.2.2
+  flutter_custom_selector: ^0.0.3
 
 dev_dependencies:
   mockito:
